--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -63,13 +63,13 @@
                 <div class="healing--imgcontainer flexcol " data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/4.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Migraine/Headache Patch
+                        Migraine/ Headache Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/5.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Focus/Concentration Patch
+                        Focus/ Concentration Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="technology__container flex">
-                <div class="technology__container--left" data-aos="fade-left" data-aos-offset="300"
+                <div class="technology__container--left" data-aos="fade-right" data-aos-offset="300"
                 data-aos-easing="ease-in-sine">
                     <h2 class="title">
                         You're Electric...
@@ -141,7 +141,7 @@
                         molecules in our nose to smell.
                     </p>
                 </div>
-                <div class="technology__container--right" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <div class="technology__container--right" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/bg3.png?v=1637108537" alt="">
                 </div>
             </div>
@@ -201,10 +201,13 @@
                     </div>
                     <button class="accordion">How Does it start working?</button>
                     <div class="panel">
-                        <p>Restore Patches are programmed, like a compact disc or record, with unique,
-                            specific information and frequencies that deliver healing and support to the
-                            body. They are drug-free, chemical-free, non-transdermal, odor-free, and safe
-                            for all ages.
+                        <p>Restore Patches are designed for specific issues, such as helping with Sleep, Anxiety,
+                         Migraines, & Tinnitus, as well as support with Energy, Focus, and Concentration. Once 
+                         applied to the skin in the designated area, our body's own electric field activates the 
+                         patch and begins sending the information to our bodies. Patches last 1-3 days depending 
+                         on specific patch (see specific patch for more details). Based on instructions, simply 
+                         attach a patch and let it work. Patches can then be removed, thrown away, and a new one 
+                         applied. 
                         </p>
                     </div>
                     <button class="accordion">How many Patches come in a box?</button>
