--- a/assets/style.css
+++ b/assets/style.css
@@ -273,34 +273,7 @@ table {
      object-fit: contain;
 }
 
-@media screen and (max-width: 768px) {
-  .technology__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
-  }
-  .technology__container--left {
-    width: 100%;
-  }
-  .technology__container--left .title {
-    text-align: center;
-    padding: unset;
-  }
-  .technology__container--left .subtitle {
-    text-align: center;
-    padding: unset;
-  }
-  .technology__container--left p {
-    padding: 2rem 0 2rem 2rem;
-  }
-  .technology__container--right {
-    width: 100%;
-  }
-}
+
 
 .support--title {
   font-family: 'MetroBold',sans-serif;
@@ -940,6 +913,35 @@ html {
     padding: 2rem 0 2rem 10rem;
   }
 }
+@media screen and (max-width: 768px) {
+  .technology__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+  }
+  .technology__container--left {
+    width: 100%;
+  }
+  .technology__container--left .title {
+    text-align: center;
+    padding: unset;
+  }
+  .technology__container--left .subtitle {
+    text-align: center;
+    padding: unset;
+  }
+  .technology__container--left p {
+    padding: 2rem 0 2rem 2rem;
+  }
+  .technology__container--right {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width:375px){
   .healing--text{
     font-size: 1.2rem;
@@ -949,5 +951,8 @@ html {
   }
   .testimonial__container--item .name {
     padding: 0 1rem;
+  }
+  .footer__container--right .form-container .inputemail {
+    width: 65%;
   }
 }
