--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -212,8 +212,13 @@
                     </div>
                     <button class="accordion">How many Patches come in a box?</button>
                     <div class="panel">
-                        <p>Yes! We've taken the hassle of having to order each month and provided HUGE
-                            savings for those in our "Subscription Club". Click here for details.
+                        <p>   Depending on the specific patch, they range from a 10-30 day supply. 
+                        </p>
+                    </div>
+                    <button class="accordion">Do you have a subscription?</button>
+                    <div class="panel">
+                        <p>   Yes! We've taken the hassle of having to order each month and provided a 
+                        HUGE savings for those in our "Subscription Club". Click here for details.
                         </p>
                     </div>
                     <button class="accordion">Do they really work and is there a guarantee?</button>
