added S in navigation products

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,7 +6,7 @@
             </div>
             <nav class="navigation-menu">
                 <ul class="main-navigation">
-                    <li><a href="#healing">PRODUCT</a></li>
+                    <li><a href="#healing">PRODUCTS</a></li>
                     <li><a href="#">SHOP</a></li>
                     <li><a href="#technology">TECHNOLOGY</a></li>
                     <li><a href="#support">SUPPORT</a></li>
