--- a/assets/style.css
+++ b/assets/style.css
@@ -191,7 +191,7 @@ table {
   font-family: 'MetroBold',sans-serif;
   font-weight: 700;
   font-size: 4rem;
-  margin: 5rem 0 10rem;
+  margin: 6rem 0;
 }
 
 .healing__container {
@@ -235,6 +235,9 @@ table {
   .healing--imgcontainer {
     width: 48%;
   }
+}
+.technology{
+  padding-top: 5rem;
 }
 
 .technology__container--left {
@@ -971,5 +974,8 @@ html {
   }
   .footer__container--right .form-container .inputemail {
     width: 66.9%;
+  }
+  .testimonial{
+    padding-bottom: 5rem;
   }
 }
