--- a/assets/style.css
+++ b/assets/style.css
@@ -273,8 +273,8 @@ table {
 
 .technology__container--right img {
   width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
 }
 
