modify hero section

--- a/assets/style.css
+++ b/assets/style.css
@@ -958,6 +958,12 @@ html {
   .testimonial--happystarcustomer .stars {
     width: 300px;
   }
+  .hero__container .absolute{
+    display: none;
+  }
+  .hero{
+    background-image: url(https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_Mobile_01.png?v=1638137905);
+  }
 }
 
 @media screen and (max-width:458px) {
