--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -17,7 +17,7 @@
                         <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/No_Chemicals-01.png?v=1637108537" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
                     </div>
                     <h3 class="hero__imgsubtxt" data-aos="zoom-in"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2000">
-                        CLEAN HEALING • CLEAN SUPPORT
+                        CLEAN HEALING <br class="mobilebr"/> • <br class="mobilebr"/> CLEAN SUPPORT
                     </h3>
             </div>
         </section>
