--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -15,7 +15,7 @@
             </nav>
             <label class="hamburger-icon" aria-label="Open navigation menu" for="menu-toggle1">&#9776;</label>
             <a href="" class="shopnowbtn">
-                <p>SHOP NOW</p>
+                <p>GET FREE PATCH</p>
             </a>
         </div>
         <div class="responsive-menu">
@@ -27,7 +27,7 @@
                 <a href="#support" class="nav-menu-links">SUPPORT</a>
                 <a href="#testimonial" class="nav-menu-links">REVIEWS</a>
                 <a href="#" class="shopnowbtn1 nav-menu-links">
-                    <p>SHOP NOW</p>
+                    <p>GET FREE PATCH</p>
                 </a>
             </div>
         </div>
