added 1 rem top to heroimgsubtxt

--- a/assets/style.css
+++ b/assets/style.css
@@ -964,6 +964,9 @@ html {
   .hero__txt, .hero__txtsub, .hero__imgsubtxt{
     text-align: center;
   }
+  .hero__imgsubtxt{
+    padding-top: 1rem;
+  }
 
 }
 @media screen and (max-width: 500px) {
@@ -975,7 +978,7 @@ html {
   }
   .hero{
     background-image: url(https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_Mobile_01.png?v=1638137905);
-    background-position-y:-119px ;
+    background-position-y:-100px ;
   }
   .hero__txt{
     padding-top: 24rem;
