--- a/assets/style.css
+++ b/assets/style.css
@@ -967,6 +967,15 @@ html {
   .hero__imgsubtxt{
     padding-top: 1rem;
   }
+  h2{
+    font-size: 2.125rem !important;
+  }
+  p{
+    font-size: 1rem !important;
+  }
+  h3{
+    font-size: 1.5rem !important;
+  }
 
 }
 @media screen and (max-width: 500px) {
