--- a/assets/style.css
+++ b/assets/style.css
@@ -353,7 +353,6 @@ table {
   font-family: 'MetroBold',sans-serif;
   font-weight: 700;
   font-size: 3.5rem;
-  margin-top: 5rem;
   padding: 5rem 0 3rem;
 }
 
@@ -986,6 +985,9 @@ html {
 
   .technology__container--left{
     padding: 2rem 0;
+  }
+  .faq--title {
+    padding: 0 0 3rem;
   }
 
 }
