text content in faq

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -188,10 +188,10 @@
         </section>
         <section class="faq" id="faq">
             <h3 class="faq--title">
-                Frequently Asked Question
+                Frequently Asked Questions
             </h3>
                 <div class="faq__container">
-                    <button class="accordion">What's In the Patch</button>
+                    <button class="accordion">What's in the Patch</button>
                     <div class="panel">
                         <p>Restore Patches are programmed, like a compact disc or record, with unique,
                             specific information and frequencies that deliver healing and support to the
@@ -199,7 +199,7 @@
                             for all ages.
                         </p>
                     </div>
-                    <button class="accordion">How Does it start working?</button>
+                    <button class="accordion">How does it start working?</button>
                     <div class="panel">
                         <p>Restore Patches are designed for specific issues, such as helping with Sleep, Anxiety,
                          Migraines, & Tinnitus, as well as support with Energy, Focus, and Concentration. Once 
