technology added single qoute

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -87,7 +87,7 @@
                         TECHNOLOGY
                     </h2>
                     <h3 class="subtitle">
-                        its Actually Pretty Simple
+                        It's Actually Pretty Simple
                     </h3>
                     <p>
                         Our team of scientists and engineers took basic
