logo added anchor

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,8 +1,10 @@
     <header id="header">
         <div class="innercontainer">
             <div class="logo">
+            <a href="">
                 <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch.png?v=1637213761"
                     alt="logo">
+            </a>
             </div>
             <nav class="navigation-menu">
                 <ul class="main-navigation">
