--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -16,7 +16,7 @@
                 </ul>
             </nav>
             <label class="hamburger-icon" aria-label="Open navigation menu" for="menu-toggle1">&#9776;</label>
-            <a href="" class="shopnowbtn">
+            <a href="" class="shopnowbtn" id="myBtn">
                 <p>GET FREE PATCH</p>
             </a>
         </div>
