--- a/assets/style.css
+++ b/assets/style.css
@@ -1064,3 +1064,197 @@ html {
     padding: 0 1rem;
   }
 }
+/*///////////////////////////  MODAL ///////////////////////////// */
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 20px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  -webkit-animation-name: fadeIn;
+  /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fff;
+  background-image: url(https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Mask_Group_40.png?v=1638403625);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+  animation-duration: 0.4s;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 7%;
+  left: 0;
+  right: 0;
+  transform: translate(-50% -50%);
+
+}
+
+.content-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {
+      bottom: -300px;
+      opacity: 0
+  }
+
+  to {
+      bottom: 0;
+      opacity: 1
+  }
+}
+
+@keyframes slideIn {
+  from {
+      bottom: -300px;
+      opacity: 0
+  }
+
+  to {
+      bottom: 0;
+      opacity: 1
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+      opacity: 0
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+.left {
+  padding: 0 3rem;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.right {
+  width: 40%;
+  padding: 4rem 0 0;
+}
+
+.form-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-input {
+  margin-bottom: 1rem;
+  border: unset;
+  background-color: rgba(73, 81, 216, .21);
+  border-radius: 3px;
+  font-size: 1rem;
+}
+
+.theno {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.obligation,
+.risk,
+.brainer {
+  color: #083d5d;
+  font-size: 1.5rem;
+}
+
+.right--title {
+  color: #083d5d;
+  font-size: 2rem;
+}
+
+.left--title {
+  font-size: 2.5rem;
+  color: #083d5d;
+  text-align: center;
+  padding: 0 4rem;
+}
+
+.left--subtitle {
+  font-size: 2.5rem;
+  color: #083d5d;
+  text-align: center;
+  margin: 1rem 0 0;
+}
+
+.imgcontainer {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.modal-submitbtn {
+  background-color: rgba(8, 61, 93, 255);
+  padding: 1rem;
+  border: unset;
+  border-radius: 25px;
+  font-size: 1rem;
+  width: 320px;
+  align-self: center;
+  color: #fff;
+  font-weight: 700;
+}
+
+/*////////////// END OF MODAL ////////////////// */
