--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -57,7 +57,7 @@
             ]
         });
         });
-              AOS.init();
+          AOS.init();
           var acc = document.getElementsByClassName("accordion");
           var i;
           for (i = 0; i < acc.length; i++) {
@@ -71,6 +71,31 @@
               } 
           });
           }
+                  // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal 
+        btn.onclick = function () {
+            modal.style.display = "block";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
       </script>
 </body>
 </html>
