--- a/assets/style.css
+++ b/assets/style.css
@@ -1220,6 +1220,8 @@ html {
 .brainer {
   color: #083d5d;
   font-size: 1.5rem;
+  font-weight: 900;
+  font-family: 'MetroBold', sans-serif;
 }
 
 .right--title {
