--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -7,8 +7,10 @@
             <div class="content-wrapper">
                 <div class="left">
                     <h2 class="left--title">Life is Full of Tough Choices</h2>
-                    <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/1508658012170.png?v=1638404626"
+                    <div class="left-modal-image">
+                        <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/1508658012170.png?v=1638404626"
                         alt="">
+                    </div>
                     <h2 class="left--subtitle">This isn't one of those!</h2>
                     <div class="imgcontainer">
                         <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/Restore_Patch_Combo_Purple.png?v=1638419732"
