--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -8,7 +8,7 @@
                 <div class="left">
                     <h2 class="left--title">Life is Full of Tough Choices</h2>
                     <div class="left-modal-image">
-                        <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/1508658012170.png?v=1638404626"
+                        <img src="https://cdn.shopify.com/s/files/1/0555/5145/9468/files/1508658012170.png?v=1638404626" width="100%"
                         alt="">
                     </div>
                     <h2 class="left--subtitle">This isn't one of those!</h2>
