added items on modal dropdown

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -28,7 +28,12 @@
                         <input type="text" name="address" id="address" placeholder="Address:" class="form-input">
                         <input type="email" name="email" id="email" placeholder="Email:" class="form-input">
                         <select name="selectpatch" id="selectpatch" class="form-input">
-                            <option value="">Select Patch</option>
+                            <option value="">Tinnitus Relief Patch</option>
+                            <option value="">Anxiety Relief Patch</option>
+                            <option value="">Sleep Patch</option>
+                            <option value="">Migraine/ Headache Patch</option>
+                            <option value="">Focus/ Concentration Patch</option>
+                            <option value="">Energy Patch</option>
                         </select>
                         <div class="theno">
                             <h3 class="obligation">No Obligation</h3>
