remove href in shopnowbtn

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -16,7 +16,7 @@
                 </ul>
             </nav>
             <label class="hamburger-icon" aria-label="Open navigation menu" for="menu-toggle1">&#9776;</label>
-            <a href="" class="shopnowbtn" id="myBtn">
+            <a class="shopnowbtn" id="myBtn">
                 <p>GET FREE PATCH</p>
             </a>
         </div>
@@ -28,7 +28,7 @@
                 <a href="#technology" class="nav-menu-links">TECHNOLOGY</a>
                 <a href="#support" class="nav-menu-links">SUPPORT</a>
                 <a href="#testimonial" class="nav-menu-links">REVIEWS</a>
-                <a href="" class="shopnowbtn1 nav-menu-links" id="myBtn">
+                <a class="shopnowbtn1 nav-menu-links" id="myBtn">
                     <p>GET FREE PATCH</p>
                 </a>
             </div>
