added var function btn2 onclick

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -28,7 +28,7 @@
                 <a href="#technology" class="nav-menu-links">TECHNOLOGY</a>
                 <a href="#support" class="nav-menu-links">SUPPORT</a>
                 <a href="#testimonial" class="nav-menu-links">REVIEWS</a>
-                <a class="shopnowbtn1 nav-menu-links" id="myBtn">
+                <a class="shopnowbtn1 nav-menu-links" id="myBtn2">
                     <p>GET FREE PATCH</p>
                 </a>
             </div>
