--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,6 +76,7 @@
 
         // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
+        var btn2 = document.getElementById("myBtn2");
 
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
@@ -84,6 +85,10 @@
         btn.onclick = function () {
             modal.style.display = "block";
         }
+        btn2.onclick = function () {
+            modal.style.display = "block";
+        }
+
 
         // When the user clicks on <span> (x), close the modal
         span.onclick = function () {
