added uncheck function in modal

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -87,7 +87,9 @@
         }
         btn2.onclick = function () {
             modal.style.display = "block";
+            document.getElementById("menu-toggle1").checked = false;
         }
+  
 
 
         // When the user clicks on <span> (x), close the modal
